--- a/test.html
+++ b/test.html
@@ -97,7 +97,7 @@
             <div class="account-wall">
                 <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
                     alt="">
-                <form class="form-signin">
+                <form id='signin' class="form-signin">
                 <input type="text" class="form-control" placeholder="Email" required autofocus>
                 <input type="password" class="form-control" placeholder="Password" required>
                 <button class="btn btn-lg btn-primary btn-block" type="submit">
@@ -113,5 +113,9 @@
         </div>
     </div>
 </div>
+
+<script>$('#signin').submit(function(){ 
+var values = $(this).serialize();
+alert(values);)
 
 </body>
