--- a/test.html
+++ b/test.html
@@ -98,8 +98,8 @@
                 <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
                     alt="">
                 <form id='signin' class="form-signin">
-                <input type="text" class="form-control" placeholder="Email" required autofocus>
-                <input type="password" class="form-control" placeholder="Password" required>
+                <input name="name" type="text" class="form-control" placeholder="Email" required autofocus>
+                <input name="password" type="password" class="form-control" placeholder="Password" required>
                 <button class="btn btn-lg btn-primary btn-block" type="submit">
                     Sign in</button>
                 <label class="checkbox pull-left">
@@ -115,7 +115,6 @@
 </div>
 
 <script>$('#signin').submit(function(){ 
-var values = $(this).serialize();
-alert(values);)
-
+var values = $(this).serializeArray();
+alert($.param(values));)
 </body>
