--- a/test.html
+++ b/test.html
@@ -115,6 +115,7 @@
 </div>
 
 <script>$('#signin').submit(function(){ 
+alert("called");
 var values = $(this).serializeArray();
 alert($.param(values));)
 </body>
