--- a/test.html
+++ b/test.html
@@ -117,5 +117,5 @@
 <script>$('#signin').submit(function(){ 
 alert("called");
 var values = $(this).serializeArray();
-alert($.param(values));)
+alert($.param(values));)</script>
 </body>
