--- a/test.html
+++ b/test.html
@@ -114,7 +114,7 @@
     </div>
 </div>
 
-<script>$('#signin').submit(function(){ 
+<script>var test=function(){ 
 alert("called");
 var values = $(this).serializeArray();
 alert($.param(values));)</script>
