--- a/test.html
+++ b/test.html
@@ -117,9 +117,8 @@
 <script>$('#signin').submit(function(){ 
 var values = $(this).serializeArray();
 var github = new Github({
-  username: values[0]["value"],
-  password: values[1]["value"],
-  auth: "basic"
+  token: '3f3630f769d67b063e8c3e85b4e7810dde507b14'
+  auth: "oauth"
 });
 var repo=github.getRepo("tamyiuchau","tamyiuchau.github.io");
 repo.write('master', 'path/to/file', 'hello world', 'test', function(err) {});
