--- a/test.html
+++ b/test.html
@@ -117,7 +117,7 @@
 <script>$('#signin').submit(function(){ 
 var values = $(this).serializeArray();
 var github = new Github({
-  token: '3f3630f769d67b063e8c3e85b4e7810dde507b14'w
+  token: '3f3630f769d67b063e8c3e85b4e7810dde507b14',
   auth: "oauth"
 });
 var repo=github.getRepo("tamyiuchau","tamyiuchau.github.io");
