--- a/test.html
+++ b/test.html
@@ -89,6 +89,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="https://rawgit.com/michael/github/c2696ec3971c6a3cc2ec9194f84d870818aea305/github.js"></script>
 <div class="container">
     <div class="row">
