--- a/test.html
+++ b/test.html
@@ -123,7 +123,7 @@ var github = new Github({
 });
 var repo=github.getRepo("tamyiuchau","tamyiuchau.github.io");
 alert('auth complete');
-repo.write('master', 'path/to/file', 'hello world', 'test', function(err) {});
+repo.write('master', 'path/to/file', 'hello world', 'test', function(err) {alert(err);});
 }
 fun();</script>
 </body>
