--- a/test.html
+++ b/test.html
@@ -117,6 +117,7 @@
 
 <script>var fun = function(){ 
 var values = $(this).serializeArray();
+debugger;
 var github = new Github({
   token: values[0]['value'],
   auth: "oauth"
