--- a/archives.html
+++ b/archives.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8" />
         <title>Turnstile: Prove and Deduce</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Turnstile: Prove and Deduce Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -26,6 +25,8 @@
     <dd><a href="/current-project.html">Current Project</a></dd>
     <dt>Fri 03 December 2010</dt>
     <dd><a href="/hierarshical-state-machine-based-web-framework.html">Hierarshical State Machine based Web Framework]</a></dd>
+    <dt>Fri 03 December 2010</dt>
+    <dd><a href="/kindle-sendbook-telegram-bot.html">Kindle sendbook telegram bot</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
@@ -41,7 +42,6 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
