--- a/tags.html
+++ b/tags.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8" />
         <title>Turnstile: Prove and Deduce - Tags</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Turnstile: Prove and Deduce Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -22,8 +21,11 @@
 <section id="content" class="body">
     <h1>Tags for Turnstile: Prove and Deduce</h1>
     <ul>
-        <li><a href="/tag/current-projects.html">current-projects</a> (2)</li>
-        <li><a href="/tag/projects.html">projects</a> (2)</li>
+        <li><a href="/tag/abadoned.html">abadoned</a> (1)</li>
+        <li><a href="/tag/current-projects.html">current-projects</a> (1)</li>
+        <li><a href="/tag/done.html">done</a> (1)</li>
+        <li><a href="/tag/projects.html">projects</a> (3)</li>
+        <li><a href="/tag/telegram-bot.html">telegram-bot</a> (1)</li>
     </ul>
 </section>
 
@@ -40,7 +42,6 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
