--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
 
 <dl>
     <dt>Fri 03 December 2010</dt>
+    <dd><a href="/a-heap-based-worst-case-on-top-k-selection-algorithm.html">A heap based Worst Case O(n) (top-k) selection algorithm</a></dd>
+    <dt>Fri 03 December 2010</dt>
     <dd><a href="/current-project.html">Current Project</a></dd>
     <dt>Fri 03 December 2010</dt>
     <dd><a href="/hierarshical-state-machine-based-web-framework.html">Hierarshical State Machine based Web Framework]</a></dd>
