--- a/current-project.html
+++ b/current-project.html
@@ -40,7 +40,7 @@
         </address>
 <p>In <a href="/category/project.html">Project</a>.</p>
 <p>tags: <a href="/tag/projects.html">projects</a> <a href="/tag/current-projects.html">current-projects</a> </p>
-</footer><!-- /.post-info -->      <p>Connect 30+ Mi Band2 with Rpi3 for real time heart rate monitor.</p>
+</footer><!-- /.post-info -->      <p>Connect 30+ Mi Band2 with Rpi3 for real time heart rate monitor. Will release on stable.</p>
     </div><!-- /.entry-content -->
 
   </article>
